--- a/TMR.html
+++ b/TMR.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TMR - Calendar</title>
-    <link rel="stylesheet" href="TMR.css?v=20251231x">
+    <link rel="stylesheet" href="TMR.css?v=20251231z">
     <link rel="stylesheet" href="backgrounds.css?v=20251208a">
     <link rel="stylesheet" href="calendar-mobile.css?v=20251208b">
     <style>
@@ -32,7 +32,7 @@
             /* TODO Panel on LEFT - modal-sized (420px) */
             .todo-panel {
                 flex: 0 0 420px;
-                background: rgba(255, 255, 255, 0.25);
+                background: rgba(255, 255, 255, 0.5);
                 backdrop-filter: blur(12px);
                 -webkit-backdrop-filter: blur(12px);
                 border-radius: 12px;
@@ -131,7 +131,7 @@
             /* MEIBOT Panel on RIGHT - modal-sized (400px) */
             .meibot-panel {
                 flex: 0 0 400px;
-                background: rgba(255, 255, 255, 0.25) !important;
+                background: rgba(255, 255, 255, 0.5) !important;
                 backdrop-filter: blur(12px) !important;
                 -webkit-backdrop-filter: blur(12px) !important;
                 border-radius: 16px;
@@ -1219,7 +1219,7 @@
         </div>
 
         <!-- MEIBOT PANEL (RIGHT SIDE - Desktop only) -->
-        <div class="meibot-panel" style="background: rgba(255, 255, 255, 0.25) !important;">
+        <div class="meibot-panel" style="background: rgba(255, 255, 255, 0.5) !important;">
             <h3>Meibot</h3>
             <div id="meibot-chat" class="meibot-chat" role="log" aria-live="polite" aria-label="Chat messages"></div>
             <form id="meibot-form" class="meibot-form" role="search">
