Fix Google Calendar disconnection issues
Implement all three fixes to prevent constant disconnections:

1. **Keep last known state on status check failures**
   - Network glitches no longer trigger false disconnects
   - Preserves button state during temporary server issues
   - Only disconnects on confirmed token deletion

2. **Increase status check interval from 10 to 30 minutes**
   - Reduces unnecessary server polling
   - Decreases network dependency
   - Improves system stability

3. **Improve token refresh logic**
   - Refresh tokens 10 minutes before expiration (was 5)
   - Better pre-expiration timing to avoid race conditions
   - Added expiry validation in status endpoint
   - Better logging for debugging
   - Graceful retry on refresh failures

Additional improvements:
- Better error handling in status endpoint
- Added token expiry checking
- Improved logging for troubleshooting
- Changed page title to "TMR ~ Create Your Future"

--- a/TMR.html
+++ b/TMR.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TMR - Calendar</title>
+    <title>TMR ~ Create Your Future</title>
     <link rel="stylesheet" href="TMR.css?v=20251231z">
     <link rel="stylesheet" href="backgrounds.css?v=20251208a">
     <link rel="stylesheet" href="calendar-mobile.css?v=20251208b">
