--- a/NotesHQ.html
+++ b/NotesHQ.html
@@ -6,12 +6,21 @@
     <title>NotesHQ ~ Organize Your Thoughts</title>
     <link rel="stylesheet" href="TMR.css?v=20251231z">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Product+Sans:wght@400;500;700&display=swap');
+
+        * {
+            font-weight: bold;
+            font-family: 'Product Sans', Arial, Helvetica, sans-serif;
+        }
+
         body {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
             margin: 0;
-            padding: 20px;
+            padding: 12px;
+            min-height: 100vh;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            position: relative;
+            overflow-x: hidden;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
 
         .notes-container {
@@ -25,52 +34,63 @@
             overflow: hidden;
             display: flex;
             flex-direction: column;
-            height: 90vh;
+            height: calc(100vh - 24px);
         }
 
         .notes-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 24px;
-            text-align: center;
-        }
-
-        .notes-header h1 {
-            margin: 0 0 8px 0;
-            font-size: 32px;
-            font-weight: 700;
-            letter-spacing: -0.5px;
-        }
-
-        .notes-header p {
-            margin: 0;
-            font-size: 14px;
-            opacity: 0.9;
+            display: none;
         }
 
         .search-bar {
-            padding: 20px 24px;
-            background: rgba(255, 255, 255, 0.3);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            padding: 12px 24px 16px 24px;
+            background: transparent;
+            border-bottom: none;
             display: flex;
             gap: 12px;
             align-items: center;
+            flex-shrink: 0;
+        }
+
+        .back-btn {
+            padding: 10px 16px;
+            background: rgba(255, 255, 255, 0.9);
+            border: none;
+            border-radius: 8px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            color: var(--accent-color, #667eea);
+            white-space: nowrap;
+            flex-shrink: 0;
+        }
+
+        .back-btn:hover {
+            background: white;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .search-container {
+            position: relative;
+            display: flex;
+            align-items: center;
+            flex: 1;
         }
 
         .search-input {
-            flex: 1;
-            padding: 12px 16px;
-            border: 2px solid rgba(255, 255, 255, 0.3);
-            border-radius: 8px;
-            background: rgba(255, 255, 255, 0.8);
+            width: 100%;
+            padding: 10px 36px 10px 16px;
+            border: 1.5px solid #ddd;
+            border-radius: 16px;
+            background: white;
             font-size: 14px;
-            transition: all 0.3s ease;
+            transition: all 0.2s ease;
+            font-family: inherit;
         }
 
         .search-input:focus {
             outline: none;
-            border-color: #667eea;
-            background: white;
+            border-color: var(--accent-color, #667eea);
             box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
         }
 
@@ -78,9 +98,30 @@
             color: #999;
         }
 
+        .search-clear-btn {
+            position: absolute;
+            right: 12px;
+            background: none;
+            border: none;
+            color: #999;
+            cursor: pointer;
+            font-size: 16px;
+            padding: 4px 8px;
+            transition: color 0.2s ease;
+            display: none;
+        }
+
+        .search-clear-btn:hover {
+            color: #333;
+        }
+
+        .search-input:not(:placeholder-shown) ~ .search-clear-btn {
+            display: block;
+        }
+
         .add-category-btn {
-            padding: 12px 20px;
-            background: rgba(102, 126, 234, 0.9);
+            padding: 10px 16px;
+            background: var(--accent-color, #667eea);
             color: white;
             border: none;
             border-radius: 8px;
@@ -89,10 +130,11 @@
             cursor: pointer;
             transition: all 0.2s ease;
             white-space: nowrap;
+            flex-shrink: 0;
         }
 
         .add-category-btn:hover {
-            background: #667eea;
+            opacity: 0.9;
             transform: translateY(-1px);
             box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);
         }
@@ -121,7 +163,7 @@
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 1px;
-            color: #666;
+            color: #444;
             padding: 0 8px;
         }
 
@@ -142,13 +184,13 @@
 
         .category-btn:hover {
             background: rgba(255, 255, 255, 0.8);
-            border-color: #667eea;
+            border-color: var(--accent-color, #667eea);
         }
 
         .category-btn.active {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: var(--accent-color, #667eea);
             color: white;
-            border-color: #667eea;
+            border-color: var(--accent-color, #667eea);
         }
 
         .notes-panel {
@@ -164,7 +206,7 @@
             align-items: center;
             justify-content: center;
             height: 100%;
-            color: #999;
+            color: #444;
             font-size: 16px;
             text-align: center;
         }
@@ -190,7 +232,7 @@
         }
 
         .note-card:hover {
-            border-color: #667eea;
+            border-color: var(--accent-color, #667eea);
             box-shadow: 0 4px 16px rgba(102, 126, 234, 0.2);
             transform: translateY(-2px);
         }
@@ -250,7 +292,7 @@
         .create-note-btn {
             align-self: flex-start;
             padding: 12px 20px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: var(--accent-color, #667eea);
             color: white;
             border: none;
             border-radius: 8px;
@@ -264,6 +306,7 @@
         }
 
         .create-note-btn:hover {
+            opacity: 0.9;
             transform: translateY(-2px);
             box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);
         }
@@ -275,10 +318,7 @@
         }
 
         .back-btn {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            padding: 12px 16px;
+            padding: 10px 16px;
             background: rgba(255, 255, 255, 0.9);
             border: none;
             border-radius: 8px;
@@ -286,14 +326,14 @@
             font-weight: 600;
             cursor: pointer;
             transition: all 0.2s ease;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
+            color: var(--accent-color, #667eea);
+            white-space: nowrap;
+            flex-shrink: 0;
         }
 
         .back-btn:hover {
             background: white;
-            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
-            transform: translateY(-1px);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
 
         .modal {
@@ -342,7 +382,7 @@
 
         .modal-content input:focus {
             outline: none;
-            border-color: #667eea;
+            border-color: var(--accent-color, #667eea);
             box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
         }
 
@@ -372,12 +412,13 @@
         }
 
         .modal-btn.submit {
-            background: #667eea;
+            background: var(--accent-color, #667eea);
             color: white;
         }
 
         .modal-btn.submit:hover {
-            background: #5568d3;
+            opacity: 0.9;
+            box-shadow: 0 2px 8px rgba(102, 126, 234, 0.3);
         }
 
         .loading {
@@ -391,7 +432,7 @@
             width: 40px;
             height: 40px;
             border: 4px solid rgba(102, 126, 234, 0.2);
-            border-top-color: #667eea;
+            border-top-color: var(--accent-color, #667eea);
             border-radius: 50%;
             animation: spin 0.8s linear infinite;
         }
@@ -438,31 +479,19 @@
                 width: auto;
                 margin-bottom: 0;
             }
-
-            .notes-header h1 {
-                font-size: 24px;
-            }
-
-            .back-btn {
-                top: 10px;
-                left: 10px;
-                padding: 10px 14px;
-                font-size: 13px;
-            }
         }
     </style>
 </head>
 <body>
-    <button class="back-btn" id="back-btn">← Back to TMR</button>
-
     <div class="notes-container">
-        <div class="notes-header">
-            <h1>📝 NotesHQ</h1>
-            <p>Organize your thoughts into categories and create rich documents</p>
-        </div>
+        <div class="notes-header"></div>
 
         <div class="search-bar">
-            <input type="text" class="search-input" id="search-input" placeholder="Search your notes...">
+            <button class="back-btn" id="back-btn">Back</button>
+            <div class="search-container">
+                <input type="text" class="search-input" id="search-input" placeholder="Search your notes...">
+                <button class="search-clear-btn" id="search-clear-btn">✕</button>
+            </div>
             <button class="add-category-btn" id="add-category-btn">+ Add Category</button>
         </div>
 
@@ -510,24 +539,52 @@
 
     <script>
         // Global state
-        let currentUser = 'device_' + Date.now() + '_' + Math.random().toString(36).substr(2, 9);
+        function getOrCreateDeviceId() {
+            let deviceId = localStorage.getItem('tmr_device_id');
+            if (!deviceId) {
+                deviceId = 'device_' + Date.now() + '_' + Math.random().toString(36).slice(2, 9);
+                localStorage.setItem('tmr_device_id', deviceId);
+            }
+            return deviceId;
+        }
+
+        let currentUser = getOrCreateDeviceId();
         let currentCategoryId = null;
         let categories = [];
         let notes = [];
+        let isSearchActive = false;
 
         const backBtn = document.getElementById('back-btn');
         const addCategoryBtn = document.getElementById('add-category-btn');
         const categoryModal = document.getElementById('category-modal');
         const noteModal = document.getElementById('note-modal');
         const searchInput = document.getElementById('search-input');
+        const searchClearBtn = document.getElementById('search-clear-btn');
         const categoriesContainer = document.getElementById('categories-container');
         const notesContentArea = document.getElementById('notes-content-area');
 
         // Initialize
         document.addEventListener('DOMContentLoaded', () => {
+            loadTheme();
             loadCategories();
             setupEventListeners();
         });
+
+        function loadTheme() {
+            // Load accent color from TMR's localStorage key
+            const accentColor = localStorage.getItem('tmr_accent') || '#0089f1';
+            document.documentElement.style.setProperty('--accent-color', accentColor);
+            
+            // Load background image from TMR's localStorage key
+            const bgImage = localStorage.getItem('tmr_bg_image');
+            if (bgImage) {
+                document.body.style.backgroundImage = `url('${bgImage}')`;
+                document.body.style.backgroundSize = 'cover';
+                document.body.style.backgroundPosition = 'center';
+                document.body.style.backgroundAttachment = 'fixed';
+                document.body.style.backgroundRepeat = 'no-repeat';
+            }
+        }
 
         function setupEventListeners() {
             backBtn.addEventListener('click', () => window.location.href = 'TMR.html');
@@ -537,6 +594,13 @@
             document.getElementById('note-cancel-btn').addEventListener('click', closeNoteModal);
             document.getElementById('note-submit-btn').addEventListener('click', submitNote);
             searchInput.addEventListener('input', debounce(handleSearch, 300));
+            if (searchClearBtn) {
+                searchClearBtn.addEventListener('click', () => {
+                    searchInput.value = '';
+                    handleSearch({ target: { value: '' } });
+                    searchInput.focus();
+                });
+            }
 
             // Close modals on backdrop click
             categoryModal.addEventListener('click', (e) => {
@@ -578,15 +642,20 @@
         }
 
         function selectCategory(categoryId, categoryName) {
+            console.log('[NotesHQ] Selecting category:', categoryId, categoryName);
             currentCategoryId = categoryId;
+            isSearchActive = false;
+            searchInput.value = '';  // Clear search when changing category
             renderCategories();
             loadNotes(categoryId);
         }
 
         function loadNotes(categoryId) {
+            console.log('[NotesHQ] Loading notes for categoryId:', categoryId);
             fetch(`/notes/category/${categoryId}`)
                 .then(res => res.json())
                 .then(data => {
+                    console.log('[NotesHQ] Loaded notes:', data);
                     notes = data.notes || [];
                     renderNotes();
                 })
@@ -594,8 +663,10 @@
         }
 
         function renderNotes() {
+            console.log('[NotesHQ] Rendering notes. Count:', notes.length, 'isSearchActive:', isSearchActive);
             if (notes.length === 0) {
-                notesContentArea.innerHTML = '<div class="notes-empty"><p>No notes in this category yet. Create one!</p></div>';
+                const emptyMsg = isSearchActive ? 'No notes found matching your search.' : 'No notes in this category yet. Create one!';
+                notesContentArea.innerHTML = `<div class="notes-empty"><p>${emptyMsg}</p></div>`;
                 notesContentArea.appendChild(createNoteButton());
                 return;
             }
@@ -761,6 +832,7 @@
         function handleSearch(e) {
             const query = e.target.value.trim();
             if (!query) {
+                isSearchActive = false;
                 if (currentCategoryId) {
                     loadNotes(currentCategoryId);
                 } else {
@@ -769,13 +841,16 @@
                 return;
             }
 
+            isSearchActive = true;
+            console.log('[NotesHQ] Searching for:', query);
             fetch('/notes/search', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ userId: currentUser, query, categoryId: currentCategoryId || null })
+                body: JSON.stringify({ userId: currentUser, query, categoryId: null })
             })
                 .then(res => res.json())
                 .then(data => {
+                    console.log('[NotesHQ] Search results:', data);
                     notes = data.notes || [];
                     renderNotes();
                 })
