--- a/Docs.html
+++ b/Docs.html
@@ -723,8 +723,8 @@
         </div>
     </div>
 
-    <script src="auth-client.js?v=20260105d"></script>
-    <script src="meibot.js?v=20251231z"></script>
+    <script src="auth-client.js?v=20260106a"></script>
+    <script src="meibot.js?v=20260106a"></script>
     <script>
         // Global state
         function getOrCreateDeviceId() {
