--- a/NotesHQ.html
+++ b/NotesHQ.html
@@ -118,6 +118,7 @@
             }
         })();
     </script>
+    <link rel="stylesheet" href="page-transitions.css?v=20260106a">
     <link rel="stylesheet" href="TMR.css?v=20251231z">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Product+Sans:wght@400;500;700&display=swap');
@@ -710,6 +711,7 @@
         </div>
     </div>
 
+    <script src="page-transitions.js?v=20260106a" defer></script>
     <script src="auth-client.js?v=20260106a"></script>
 
     <script>
