--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>TMR Admin</title>
+  <link rel="stylesheet" href="page-transitions.css?v=20260106a">
   <link rel="stylesheet" href="/admin.css">
 </head>
 <body>
@@ -26,6 +27,7 @@
     </section>
   </main>
 
+  <script src="page-transitions.js?v=20260106a" defer></script>
   <script src="/admin.js"></script>
 </body>
 </html>
